--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false #disqus
+    provider : false
     #disqus :
       #short_name : jeissonguevara
     #livefyre :
@@ -98,7 +98,7 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #        
   analytics :
-    provider : false #google 
+    provider : false 
     #google : 
         #tracking_id : 'UA-123-12'
     #getclicky :
